--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2022-07-28 Version: v1.0.13
+ - Update SetDomainServerCertificate.
+
 2022-06-09 Version: v1.0.12
  - Update DescribeCdnDomainConfigs.
 
