--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2022-10-27 Version: v2.0.3
+- Add DescribeWildcardDomainDetailData.
+
 2022-10-13 Version: v2.0.2
 - Update DetachDomainNameFromVersion.
 
