--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2022-12-09 Version: v2.0.6
+- Delete DescribeLiveStreamRecordContent.
+
 2022-11-17 Version: v2.0.5
 - Update BatchDescribeCdnIpInfo.
 
