--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+2024-03-24 Version: v4.3.0
+- Support API BatchDescribeCdnIpInfo.
+- Support API DescribeCdnDomainAtoaLogs.
+- Support API DescribeDomainVerifyData.
+- Support API RefreshObjectCacheByCacheTag.
+- Update API DescribeRefreshTasks: update param ObjectType.
+
+
 2024-02-21 Version: v4.2.0
 - Support API BatchDescribeCdnIpInfo.
 - Support API DescribeCdnDomainAtoaLogs.
