--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,9 @@
+2024-11-06 Version: v5.1.0
+- Support API DescribeCdnTypes.
+- Support API DescribeUserCdnStatus.
+- Support API ModifyCdnService.
+
+
 2024-11-03 Version: v5.0.1
 - Update API PushObjectCache: add param QueryHashkey.
 
