--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+2024-12-11 Version: v5.2.1
+- Update API ListTagResources: update param Tag.
+- Update API TagResources: update param Tag.
+
+
 2024-11-19 Version: v5.2.0
 - Support API DescribeCustomDomainSampleRate.
 - Support API ListRealtimeLogDelivery.
