--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,12 @@
+2025-03-12 Version: v6.0.0
+- Support API BatchSetGrayDomainFunction.
+- Support API GetGrayDomainFunction.
+- Support API PublishGrayDomainConfig.
+- Delete API BatchSetCdnDomainServerCertificate.
+- Delete API SetDomainServerCertificate.
+- Update API DescribeDomainPathData: update response param.
+
+
 2024-12-13 Version: v5.2.2
 - Update API DisableRealtimeLogDelivery: add param Logstore.
 - Update API DisableRealtimeLogDelivery: add param Project.
